<resources>
    <string name="app_name">DateXheck</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="login" translatable="false">Login</string>
    <string name="signup" translatable="false">SignUp</string>
    <string name="name">Name</string>
    <string name="password" translatable="false">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="scan_for_barcode" translatable="false">Scan For Barcode</string>
    <string name="scan" translatable="false">Scan</string>
    <string name="reduce_me" translatable="false">Reduce/ Maintain Me</string>
    <string name="total_items">Total Items</string>

    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_10" translatable="false">10</string>
    <string name="this_is_notification" translatable="false">This Is Notification</string>
    <string name="this_is_list" translatable="false">This Is List</string>


    <string name="title_activity_add_product_scrolling" translatable="false">New Product</string>

    <string name="overall_rating" translatable="false">Overall rating</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="create_product_succeeded_message" translatable="false">Your Product Added</string>
    <string name="create_product_failed_message" translatable="false">Something is not right!!</string>
    <string name="product_name" translatable="false">Product Name</string>
    <string name="product_barcode" translatable="false">Product Barcode</string>
    <string name="expiry_date">Expiry Date :</string>
    <string name="cancel">Cancel</string>
    <string name="select_date" translatable="false">select date</string>
    <string name="add">Add</string>
    <string name="password_signup_activity" translatable="false">Password</string>
    <string name="sign_up_signup_activity" translatable="false">Sign Up</string>
    <string name="login_signup_activity" translatable="false">Login</string>
    <string name="already_signed_up">Already Signed Up?</string>
    <string name="email_signup_activity" translatable="false">email</string>
    <string name="view_all_product">View All Product</string>

    <string name="product_expiry_date" translatable="false">Product Expiry Date</string>

    <string name="product_id" translatable="false">Product id</string>
    <string name="updatebtn_" translatable="false">Update</string>
    <string name="deleteBtn">Delete</string>
    <string name="go_to_insertbtn">Go To Insert</string>
    <string name="emailET" translatable="false">Email</string>
    <string name="home_btnNav">Home</string>
    <string name="list_btnNav">List</string>
    <string name="scanBtnNav" translatable="false">Scan</string>
    <string name="add_products">Add Products</string>


</resources>
